--- a/index.html
+++ b/index.html
@@ -1,8 +1,71 @@
 <!DOCTYPE HTML>
 <html>
 <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="shortcut icon" href="./images/chi.jpg">
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link rel="stylesheet" href="./styles.css">
+    <title>Gabriel Mendez-Frances | Home</title>
 </head>
 <body>
-<p style="font-family: ariel">Gabe Frances content coming soon!</p>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="#">Gabriel Mendez-Frances</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Projects</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Resume</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+
+      <div class="jumbotron">
+        <h1 class="display-5">Hello, my name is Gabriel Mendez-Frances</h1>
+        <p class="lead">(But you can call me Gabe)</p>
+        <hr class="my-4">
+      </div>
+
+    <div class="container-fluid">
+        <img src="./images/windowsxp.jpg" class="img-fluid">
+    </div>
+
+    <div class="container-fluid">
+        <p>Hello, I'm Gabe! I'm a sophomore at the University of Alabama in Huntsville.
+            I'm currently majoring in computer science, but I am taking the time to 
+            study cybersecurity outside the classroom as well. I have also been working 
+            as a freelance web developer for the past two years and have experience 
+            with front-end languages, the Bootstrap framework, WordPress, and more.
+        </p>
+        <p>
+            I'm always working on something new and exciting! In the past, I made my own Alexa Skill,
+            helped local businesses start their online prescence, created an automated UV Index notifier
+            (mostly for personal use since I am albino), and at the momemnt, I'm getting into app development
+            with Swift! I'm hoping to hone my technica skills even more through team-based projects and
+            engaging internships in the near future. Until then, drop me a line and let's talk tech!
+        </p>
+    </div>
+
+    <footer class="container-fluid footer">
+        <div class="row">
+          <div class="col text-center">Voltooid:</br>40/80 taken</div>
+          <div class="col text-center">Ongepland:</br>5 taken</div>
+        </div>
+    </footer>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 </body>
 </html>
